--- a/index.ipynb
+++ b/index.ipynb
@@ -38,16 +38,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'woW WE LOVE cOdInG and strINGS!'"
+       "'wow we love coding and strings!'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,7 +55,7 @@
    "source": [
     "sentence = \"woW WE LOVE cOdInG and strINGS!\"\n",
     "sentence.lower()\n",
-    "sentence\n"
+    "\n"
    ]
   },
   {
