--- a/index.ipynb
+++ b/index.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -47,14 +47,14 @@
        "'Wow we love coding and strings!'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sentence = \"woW WE LOVE cOdInG and strINGS!\"\n",
-    "sentence.capitalize()\n",
+    "sentence = \"woW WE LOVE cOdInG and strINGS!\".capitalize()\n",
+    "sentence\n",
     "\n"
    ]
   },
