--- a/index.ipynb
+++ b/index.ipynb
@@ -570,7 +570,7 @@
    "outputs": [],
    "source": [
     "name = \"Bart Simpson\"\n",
-    "name = name.replace()"
+    "name = name.replace(Simpson\")"
    ]
   },
   {
