--- a/index.ipynb
+++ b/index.ipynb
@@ -565,12 +565,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "name = \"Bart Simpson\"\n",
-    "name = name.replace(\"Simpson\", \"Fland\")"
+    "name = name.replace(\"Simpson\", \"Flanders\")\n",
+    "name"
    ]
   },
   {
